--- a/src/app/modules/auth/login-and-register/login-and-register.component.html
+++ b/src/app/modules/auth/login-and-register/login-and-register.component.html
@@ -31,12 +31,12 @@
           <h3 class="title">Login</h3>
           <form class="max-width-auto">
             <div class="form-group">
-              <input name="con_name" type="text" />
-              <label>Username or email *</label>
+              <input name="email" type="text" [(ngModel)]="email" />
+              <label>Email *</label>
               <span class="focus-border"></span>
             </div>
             <div class="form-group">
-              <input name="con_email" type="email" />
+              <input name="password" type="text" [(ngModel)]="password" />
               <label>Password *</label>
               <span class="focus-border"></span>
             </div>
@@ -57,7 +57,8 @@
 
             <div class="form-submit-group">
               <button
-                type="submit"
+                type="button"
+                (click)="login()"
                 class="rbt-btn btn-md btn-gradient hover-icon-reverse w-100"
               >
                 <span class="icon-reverse-wrapper">
