--- a/src/app/modules/auth/login-and-register/login-and-register.component.html
+++ b/src/app/modules/auth/login-and-register/login-and-register.component.html
@@ -31,12 +31,12 @@
           <h3 class="title">Login</h3>
           <form class="max-width-auto">
             <div class="form-group">
-              <input name="email" type="text" [(ngModel)]="email" />
+              <input name="email" type="email" [(ngModel)]="email" />
               <label>Email *</label>
               <span class="focus-border"></span>
             </div>
             <div class="form-group">
-              <input name="password" type="text" [(ngModel)]="password" />
+              <input name="password" type="password" [(ngModel)]="password" />
               <label>Password *</label>
               <span class="focus-border"></span>
             </div>
