--- a/src/app/modules/auth/login-and-register/login-and-register.component.html
+++ b/src/app/modules/auth/login-and-register/login-and-register.component.html
@@ -81,32 +81,39 @@
           <h3 class="title">Register</h3>
           <form class="max-width-auto">
             <div class="form-group">
-              <input name="register-email" type="text" />
+              <input name="email_register" type="email" [(ngModel)]="email_register" />
               <label>Email address *</label>
               <span class="focus-border"></span>
             </div>
 
             <div class="form-group">
-              <input name="register_user" type="text" />
-              <label>Username *</label>
+              <input name="name_register" type="text" [(ngModel)]="name_register" />
+              <label>name *</label>
               <span class="focus-border"></span>
             </div>
 
             <div class="form-group">
-              <input name="register_password" type="password" />
+              <input name="surname_register" type="text" [(ngModel)]="surname_register" />
+              <label>Surname *</label>
+              <span class="focus-border"></span>
+            </div>
+
+            <div class="form-group">
+              <input name="password_register" type="password" [(ngModel)]="password_register" />
               <label>Password *</label>
               <span class="focus-border"></span>
             </div>
 
             <div class="form-group">
-              <input name="register_conpassword" type="password" />
+              <input name="password_confirmation" type="password" [(ngModel)]="password_confirmation" />
               <label>Confirm Password *</label>
               <span class="focus-border"></span>
             </div>
 
             <div class="form-submit-group">
               <button
-                type="submit"
+                type="button"
+                (click)="register()"
                 class="rbt-btn btn-md btn-gradient hover-icon-reverse w-100"
               >
                 <span class="icon-reverse-wrapper">
