--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1403,7 +1403,8 @@
                       />
                     </div>
                     <div class="admin-info">
-                      <span class="name">Nipa Bali</span>
+                      <span class="name" *ngIf="user">{{ user.name }}</span>
+                      <span class="name" *ngIf="!user">Ingresa</span>
                       <a class="rbt-btn-link color-primary" href="profile.html"
                         >View Profile</a
                       >
@@ -1477,7 +1478,8 @@
                       </a>
                     </li>
                     <li>
-                      <a href="index.html">
+                      <!-- Con return false hacemos que no nos redirija a ningun lado -->
+                      <a href="#" onclick="return false;" (click)="logout()">
                         <i class="feather-log-out"></i>
                         <span>Logout</span>
                       </a>
