[Feat] Agregar la opción de listar el total de los cursos para una categoria

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -250,7 +250,7 @@
                   <h5 class="title">{{ CATEGORIE.title }}</h5>
                   <div class="read-more-btn">
                     <span class="rbt-btn-link"
-                      >{{ CATEGORIE.state }}<i class="feather-arrow-right"></i
+                      >{{ CATEGORIE.count_courses }} Courses<i class="feather-arrow-right"></i
                     ></span>
                   </div>
                 </div>
