--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -567,10 +567,7 @@
                 <div class="rbt-author-meta mb--20">
                   <div class="rbt-avater">
                     <a href="#">
-                      <img
-                        [src]="COURSE_TOP.user.avatar"
-                        alt="Sophia Jaymes"
-                      />
+                      <img [src]="COURSE_TOP.user.avatar" alt="Sophia Jaymes" />
                     </a>
                   </div>
                   <div class="rbt-author-info">
@@ -585,7 +582,9 @@
 
                 <div class="rbt-card-bottom">
                   <div class="rbt-price">
-                    <span class="current-price">${{ COURSE_TOP.price_usd }}</span>
+                    <span class="current-price"
+                      >${{ COURSE_TOP.price_usd }}</span
+                    >
                     <!-- <span class="off-price">$120</span> -->
                   </div>
                   <a class="rbt-btn-link" href="course-details.html"
@@ -1499,77 +1498,25 @@
             id="rbt-myTab"
             role="tablist"
           >
-            <li class="nav-item" role="presentation">
-              <button
-                class="active"
-                id="all-tab"
-                data-bs-toggle="tab"
-                data-bs-target="#all"
-                type="button"
-                role="tab"
-                aria-controls="all"
-                aria-selected="true"
-              >
-                <span class="filter-text">All Course</span>
-                <span class="course-number">04</span>
-              </button>
-            </li>
-            <li class="nav-item" role="presentation">
-              <button
-                id="featured-tab"
-                data-bs-toggle="tab"
-                data-bs-target="#featured"
-                type="button"
-                role="tab"
-                aria-controls="featured"
-                aria-selected="false"
-              >
-                <span class="filter-text">Featured</span>
-                <span class="course-number">02</span>
-              </button>
-            </li>
-            <li class="nav-item" role="presentation">
-              <button
-                id="popular-tab"
-                data-bs-toggle="tab"
-                data-bs-target="#popular"
-                type="button"
-                role="tab"
-                aria-controls="popular"
-                aria-selected="false"
-              >
-                <span class="filter-text">Popular</span>
-                <span class="course-number">03</span>
-              </button>
-            </li>
-            <li class="nav-item" role="presentation">
-              <button
-                id="trending-tab"
-                data-bs-toggle="tab"
-                data-bs-target="#trending"
-                type="button"
-                role="tab"
-                aria-controls="trending"
-                aria-selected="false"
-              >
-                <span class="filter-text">Trending</span>
-                <span class="course-number">03</span>
-              </button>
-            </li>
-            <li class="nav-item" role="presentation">
-              <button
-                id="latest-tab"
-                data-bs-toggle="tab"
-                data-bs-target="#latest"
-                type="button"
-                role="tab"
-                aria-controls="latest"
-                aria-selected="false"
-              >
-                <span class="filter-text">Latest</span>
-                <span class="course-number">04</span>
-              </button>
-            </li>
+            <ng-container *ngFor="let COURSE_SECTION of COURSES_SECTIONS; let i = index">
+              <li class="nav-item" role="presentation">
+                <button
+                  [ngClass]="{'active': i == 0}"
+                  id="all-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#all"
+                  type="button"
+                  role="tab"
+                  aria-controls="all"
+                  aria-selected="true"
+                >
+                  <span class="filter-text">{{ COURSE_SECTION.title }}</span>
+                  <span class="course-number"
+                    >0{{ COURSE_SECTION.count_courses }}</span
+                  >
+                </button>
+              </li>
+            </ng-container>
           </ul>
         </div>
       </div>
