--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -54,160 +54,64 @@
 
             <div
               class="banner-card pb--60 mb--50 swiper rbt-dot-bottom-center banner-swiper-active"
+              *ngIf="CAMPAING_BANNER"
             >
               <div class="swiper-wrapper">
-                <!-- Start Single Card  -->
-                <div class="swiper-slide">
-                  <div class="rbt-card variation-01 rbt-hover">
-                    <div class="rbt-card-img">
-                      <a href="course-details.html">
-                        <img
-                          src="assets/images/course/course-01.jpg"
-                          alt="Card image"
-                        />
-                        <div class="rbt-badge-3 bg-white">
-                          <span>-40%</span>
-                          <span>Off</span>
-                        </div>
-                      </a>
-                    </div>
-                    <div class="rbt-card-body">
-                      <ul class="rbt-meta">
-                        <li><i class="feather-book"></i>12 Lessons</li>
-                        <li><i class="feather-users"></i>50 Students</li>
-                      </ul>
-                      <h4 class="rbt-card-title">
-                        <a href="course-details.html">React</a>
-                      </h4>
-                      <p class="rbt-card-text">
-                        It is a long established fact that a reader will be
-                        distracted.
-                      </p>
-                      <div class="rbt-review">
-                        <div class="rating">
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                        </div>
-                        <span class="rating-count"> (15 Reviews)</span>
+                <ng-container *ngFor="let COURSE_B of COURSES_BANNER">
+                  <!-- Start Single Card  -->
+                  <div class="swiper-slide">
+                    <div class="rbt-card variation-01 rbt-hover">
+                      <div class="rbt-card-img">
+                        <a href="course-details.html">
+                          <img [src]="COURSE_B.image" alt="Card image" />
+                          <div class="rbt-badge-3 bg-white">
+                            <span *ngIf="CAMPAING_BANNER.type_discount === 1"
+                              >-{{ CAMPAING_BANNER.discount }}%</span
+                            >
+                            <span *ngIf="CAMPAING_BANNER.type_discount === 2"
+                              >-{{ CAMPAING_BANNER.discount }}USD</span
+                            >
+                            <span>Off</span>
+                          </div>
+                        </a>
                       </div>
-                      <div class="rbt-card-bottom">
-                        <div class="rbt-price">
-                          <span class="current-price">$70</span>
-                          <span class="off-price">$120</span>
+                      <div class="rbt-card-body">
+                        <ul class="rbt-meta">
+                          <li><i class="feather-book"></i>12 Lessons</li>
+                          <li><i class="feather-users"></i>50 Students</li>
+                        </ul>
+                        <h4 class="rbt-card-title">
+                          <a href="course-details.html">{{ COURSE_B.title }}</a>
+                        </h4>
+                        <p class="rbt-card-text">
+                          {{ COURSE_B.subtitle }}
+                        </p>
+                        <div class="rbt-review">
+                          <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                          </div>
+                          <span class="rating-count"> (15 Reviews)</span>
                         </div>
-                        <a class="rbt-btn-link" href="course-details.html"
-                          >Learn More<i class="feather-arrow-right"></i
-                        ></a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- End Single Card  -->
-
-                <!-- Start Single Card  -->
-                <div class="swiper-slide">
-                  <div class="rbt-card variation-01 rbt-hover">
-                    <div class="rbt-card-img">
-                      <a href="course-details.html">
-                        <img
-                          src="assets/images/course/classic-lms-01.jpg"
-                          alt="Card image"
-                        />
-                        <div class="rbt-badge-3 bg-white">
-                          <span>-40%</span>
-                          <span>Off</span>
+                        <div class="rbt-card-bottom">
+                          <div class="rbt-price">
+                            <span class="current-price"
+                              >${{ getNewTotal(COURSE_B, CAMPAING_BANNER)}}</span
+                            >
+                            <span class="off-price">${{ COURSE_B.price_usd }}</span>
+                          </div>
+                          <a class="rbt-btn-link" href="course-details.html"
+                            >Learn More<i class="feather-arrow-right"></i
+                          ></a>
                         </div>
-                      </a>
-                    </div>
-                    <div class="rbt-card-body">
-                      <ul class="rbt-meta">
-                        <li><i class="feather-book"></i>12 Lessons</li>
-                        <li><i class="feather-users"></i>50 Students</li>
-                      </ul>
-                      <h4 class="rbt-card-title">
-                        <a href="course-details.html">React</a>
-                      </h4>
-                      <p class="rbt-card-text">
-                        It is a long established fact that a reader will be
-                        distracted.
-                      </p>
-                      <div class="rbt-review">
-                        <div class="rating">
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                        </div>
-                        <span class="rating-count"> (15 Reviews)</span>
-                      </div>
-                      <div class="rbt-card-bottom">
-                        <div class="rbt-price">
-                          <span class="current-price">$70</span>
-                          <span class="off-price">$120</span>
-                        </div>
-                        <a class="rbt-btn-link" href="course-details.html"
-                          >Learn More<i class="feather-arrow-right"></i
-                        ></a>
                       </div>
                     </div>
                   </div>
-                </div>
-                <!-- End Single Card  -->
-
-                <!-- Start Single Card  -->
-                <div class="swiper-slide">
-                  <div class="rbt-card variation-01 rbt-hover">
-                    <div class="rbt-card-img">
-                      <a href="course-details.html">
-                        <img
-                          src="assets/images/course/course-online-02.jpg"
-                          alt="Card image"
-                        />
-                        <div class="rbt-badge-3 bg-white">
-                          <span>-40%</span>
-                          <span>Off</span>
-                        </div>
-                      </a>
-                    </div>
-                    <div class="rbt-card-body">
-                      <ul class="rbt-meta">
-                        <li><i class="feather-book"></i>12 Lessons</li>
-                        <li><i class="feather-users"></i>50 Students</li>
-                      </ul>
-                      <h4 class="rbt-card-title">
-                        <a href="course-details.html">React</a>
-                      </h4>
-                      <p class="rbt-card-text">
-                        It is a long established fact that a reader will be
-                        distracted.
-                      </p>
-                      <div class="rbt-review">
-                        <div class="rating">
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                        </div>
-                        <span class="rating-count"> (15 Reviews)</span>
-                      </div>
-                      <div class="rbt-card-bottom">
-                        <div class="rbt-price">
-                          <span class="current-price">$70</span>
-                          <span class="off-price">$120</span>
-                        </div>
-                        <a class="rbt-btn-link" href="course-details.html"
-                          >Learn More<i class="feather-arrow-right"></i
-                        ></a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- End Single Card  -->
+                  <!-- End Single Card  --></ng-container
+                >
               </div>
               <div class="rbt-swiper-pagination"></div>
             </div>
@@ -1506,7 +1410,7 @@
                   [ngClass]="{ active: i == 0 }"
                   id="all-tab"
                   data-bs-toggle="tab"
-                  [attr.data-bs-target]="'#'+COURSE_SECTION.title_empty"
+                  [attr.data-bs-target]="'#' + COURSE_SECTION.title_empty"
                   type="button"
                   role="tab"
                   aria-controls="all"
@@ -1545,10 +1449,7 @@
                       <div class="rbt-card variation-01 rbt-hover">
                         <div class="rbt-card-img">
                           <a href="course-details.html">
-                            <img
-                              [src]="COURSE.image"
-                              alt="Card image"
-                            />
+                            <img [src]="COURSE.image" alt="Card image" />
                           </a>
                         </div>
                         <div class="rbt-card-body">
@@ -1570,9 +1471,7 @@
                             </div>
                           </div>
                           <h4 class="rbt-card-title">
-                            <a href="course-details.html"
-                              >{{ COURSE.title }}</a
-                            >
+                            <a href="course-details.html">{{ COURSE.title }}</a>
                           </h4>
                           <ul class="rbt-meta">
                             <li><i class="feather-book"></i>20 Lessons</li>
@@ -1581,7 +1480,9 @@
 
                           <div class="rbt-card-bottom">
                             <div class="rbt-price">
-                              <span class="current-price">${{ COURSE.price_usd }}</span>
+                              <span class="current-price"
+                                >${{ COURSE.price_usd }}</span
+                              >
                               <!-- <span class="off-price">$120</span> -->
                             </div>
                             <a class="rbt-btn-link" href="course-details.html"
