[Feat] Agregar estructura de la campaña de descuento flash

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -99,9 +99,13 @@
                         <div class="rbt-card-bottom">
                           <div class="rbt-price">
                             <span class="current-price"
-                              >${{ getNewTotal(COURSE_B, CAMPAING_BANNER)}}</span
+                              >${{
+                                getNewTotal(COURSE_B, CAMPAING_BANNER)
+                              }}</span
                             >
-                            <span class="off-price">${{ COURSE_B.price_usd }}</span>
+                            <span class="off-price"
+                              >${{ COURSE_B.price_usd }}</span
+                            >
                           </div>
                           <a class="rbt-btn-link" href="course-details.html"
                             >Learn More<i class="feather-arrow-right"></i
@@ -166,20 +170,32 @@
     </div>
   </div>
 
-  <div class="rbt-counterup-area bg-color-white">
+  <div class="rbt-counterup-area bg-color-white" *ngIf="CAMPAING_FLASH">
     <div class="conter-style-2">
       <div class="container">
         <div class="row g-5 align-items-center">
           <div class="col-lg-6 order-2 order-lg-1">
             <div class="section-title text-start">
               <span class="subtitle bg-pink-opacity">Descuento</span>
-              <h2 class="title">Aprovecha el 50% menos en estos cursos !</h2>
+              <h2 class="title" *ngIf="CAMPAING_FLASH.type_discount === 1">
+                Aprovecha el {{ CAMPAING_FLASH.discount }}% menos en estos
+                cursos !
+              </h2>
+              <h2 class="title" *ngIf="CAMPAING_FLASH.type_discount === 2">
+                Aprovecha el {{ CAMPAING_FLASH.discount }}USD menos en estos
+                cursos !
+              </h2>
               <p class="description has-medium-font-size mt--20 mb--0">
-                Tiempo limitado del 05/07/2023 a 15/07/2023.
+                Tiempo limitado del
+                {{ getParseDate(CAMPAING_FLASH.start_date) }} a
+                {{ getParseDate(CAMPAING_FLASH.end_date) }}.
               </p>
             </div>
             <div class="countdown-style-1 mt--50 d-flex justify-content-center">
-              <div class="countdown" data-date="2023-12-30">
+              <div
+                class="countdown"
+                [attr.data-date]="getParseDate(CAMPAING_FLASH.end_date, 2)"
+              >
                 <div class="countdown-container days">
                   <span class="countdown-value">87</span>
                   <span class="countdown-heading">Days</span>
@@ -201,206 +217,59 @@
           </div>
           <div class="col-lg-6 order-1 order-lg-2">
             <div class="row">
-              <!-- Start Single Course  -->
-              <div class="col-md-6 col-sm-12 col-12 py-3">
-                <div class="rbt-card variation-01 rbt-hover">
-                  <div class="rbt-card-img">
-                    <a href="course-details.html">
-                      <img
-                        src="assets/images/course/course-online-01.jpg"
-                        alt="Card image"
-                      />
-                    </a>
-                  </div>
-                  <div class="rbt-card-body">
-                    <div class="rbt-card-top">
-                      <div class="rbt-review">
-                        <div class="rating">
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
+              <ng-container *ngFor="let COURSE_F of COURSES_FLASH">
+                <!-- Start Single Course  -->
+                <div class="col-md-6 col-sm-12 col-12 py-3">
+                  <div class="rbt-card variation-01 rbt-hover">
+                    <div class="rbt-card-img">
+                      <a href="course-details.html">
+                        <img [src]="COURSE_F.image" alt="Card image" />
+                      </a>
+                    </div>
+                    <div class="rbt-card-body">
+                      <div class="rbt-card-top">
+                        <div class="rbt-review">
+                          <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                          </div>
+                          <span class="rating-count"> (15 Reviews)</span>
                         </div>
-                        <span class="rating-count"> (15 Reviews)</span>
+                        <div class="rbt-bookmark-btn">
+                          <a class="rbt-round-btn" title="Bookmark" href="#"
+                            ><i class="feather-bookmark"></i
+                          ></a>
+                        </div>
                       </div>
-                      <div class="rbt-bookmark-btn">
-                        <a class="rbt-round-btn" title="Bookmark" href="#"
-                          ><i class="feather-bookmark"></i
+                      <h4 class="rbt-card-title">
+                        <a href="course-details.html">{{ COURSE_F.title }}</a>
+                      </h4>
+                      <ul class="rbt-meta">
+                        <li><i class="feather-book"></i>20 Lessons</li>
+                        <li><i class="feather-users"></i>40 Students</li>
+                      </ul>
+
+                      <div class="rbt-card-bottom">
+                        <div class="rbt-price">
+                          <span class="current-price"
+                            >${{ getNewTotal(COURSE_F, CAMPAING_FLASH) }}</span
+                          >
+                          <span class="off-price"
+                            >${{ COURSE_F.price_usd }}</span
+                          >
+                        </div>
+                        <a class="rbt-btn-link" href="course-details.html"
+                          >Learn More<i class="feather-arrow-right"></i
                         ></a>
                       </div>
                     </div>
-                    <h4 class="rbt-card-title">
-                      <a href="course-details.html">React Front To Back</a>
-                    </h4>
-                    <ul class="rbt-meta">
-                      <li><i class="feather-book"></i>20 Lessons</li>
-                      <li><i class="feather-users"></i>40 Students</li>
-                    </ul>
-
-                    <div class="rbt-card-bottom">
-                      <div class="rbt-price">
-                        <span class="current-price">$60</span>
-                        <span class="off-price">$120</span>
-                      </div>
-                      <a class="rbt-btn-link" href="course-details.html"
-                        >Learn More<i class="feather-arrow-right"></i
-                      ></a>
-                    </div>
                   </div>
                 </div>
-              </div>
-              <!-- End Single Course  -->
-              <!-- Start Single Course  -->
-              <div class="col-md-6 col-sm-12 col-12 py-3">
-                <div class="rbt-card variation-01 rbt-hover">
-                  <div class="rbt-card-img">
-                    <a href="course-details.html">
-                      <img
-                        src="assets/images/course/course-online-01.jpg"
-                        alt="Card image"
-                      />
-                    </a>
-                  </div>
-                  <div class="rbt-card-body">
-                    <div class="rbt-card-top">
-                      <div class="rbt-review">
-                        <div class="rating">
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                        </div>
-                        <span class="rating-count"> (15 Reviews)</span>
-                      </div>
-                      <div class="rbt-bookmark-btn">
-                        <a class="rbt-round-btn" title="Bookmark" href="#"
-                          ><i class="feather-bookmark"></i
-                        ></a>
-                      </div>
-                    </div>
-                    <h4 class="rbt-card-title">
-                      <a href="course-details.html">React Front To Back</a>
-                    </h4>
-                    <ul class="rbt-meta">
-                      <li><i class="feather-book"></i>20 Lessons</li>
-                      <li><i class="feather-users"></i>40 Students</li>
-                    </ul>
-
-                    <div class="rbt-card-bottom">
-                      <div class="rbt-price">
-                        <span class="current-price">$60</span>
-                        <span class="off-price">$120</span>
-                      </div>
-                      <a class="rbt-btn-link" href="course-details.html"
-                        >Learn More<i class="feather-arrow-right"></i
-                      ></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- End Single Course  -->
-              <!-- Start Single Course  -->
-              <div class="col-md-6 col-sm-12 col-12 py-3">
-                <div class="rbt-card variation-01 rbt-hover">
-                  <div class="rbt-card-img">
-                    <a href="course-details.html">
-                      <img
-                        src="assets/images/course/course-online-01.jpg"
-                        alt="Card image"
-                      />
-                    </a>
-                  </div>
-                  <div class="rbt-card-body">
-                    <div class="rbt-card-top">
-                      <div class="rbt-review">
-                        <div class="rating">
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                        </div>
-                        <span class="rating-count"> (15 Reviews)</span>
-                      </div>
-                      <div class="rbt-bookmark-btn">
-                        <a class="rbt-round-btn" title="Bookmark" href="#"
-                          ><i class="feather-bookmark"></i
-                        ></a>
-                      </div>
-                    </div>
-                    <h4 class="rbt-card-title">
-                      <a href="course-details.html">React Front To Back</a>
-                    </h4>
-                    <ul class="rbt-meta">
-                      <li><i class="feather-book"></i>20 Lessons</li>
-                      <li><i class="feather-users"></i>40 Students</li>
-                    </ul>
-
-                    <div class="rbt-card-bottom">
-                      <div class="rbt-price">
-                        <span class="current-price">$60</span>
-                        <span class="off-price">$120</span>
-                      </div>
-                      <a class="rbt-btn-link" href="course-details.html"
-                        >Learn More<i class="feather-arrow-right"></i
-                      ></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- End Single Course  -->
-              <!-- Start Single Course  -->
-              <div class="col-md-6 col-sm-12 col-12 py-3">
-                <div class="rbt-card variation-01 rbt-hover">
-                  <div class="rbt-card-img">
-                    <a href="course-details.html">
-                      <img
-                        src="assets/images/course/course-online-01.jpg"
-                        alt="Card image"
-                      />
-                    </a>
-                  </div>
-                  <div class="rbt-card-body">
-                    <div class="rbt-card-top">
-                      <div class="rbt-review">
-                        <div class="rating">
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                          <i class="fas fa-star"></i>
-                        </div>
-                        <span class="rating-count"> (15 Reviews)</span>
-                      </div>
-                      <div class="rbt-bookmark-btn">
-                        <a class="rbt-round-btn" title="Bookmark" href="#"
-                          ><i class="feather-bookmark"></i
-                        ></a>
-                      </div>
-                    </div>
-                    <h4 class="rbt-card-title">
-                      <a href="course-details.html">React Front To Back</a>
-                    </h4>
-                    <ul class="rbt-meta">
-                      <li><i class="feather-book"></i>20 Lessons</li>
-                      <li><i class="feather-users"></i>40 Students</li>
-                    </ul>
-
-                    <div class="rbt-card-bottom">
-                      <div class="rbt-price">
-                        <span class="current-price">$60</span>
-                        <span class="off-price">$120</span>
-                      </div>
-                      <a class="rbt-btn-link" href="course-details.html"
-                        >Learn More<i class="feather-arrow-right"></i
-                      ></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- End Single Course  -->
+                <!-- End Single Course  -->
+              </ng-container>
             </div>
           </div>
         </div>
