--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -224,6 +224,11 @@
                     <div class="rbt-card-img">
                       <a href="course-details.html">
                         <img [src]="COURSE_F.image" alt="Card image" />
+                        <div class="rbt-badge-3 bg-white" *ngIf="CAMPAING_FLASH">
+                          <span *ngIf="CAMPAING_FLASH.type_discount === 1">-{{ CAMPAING_FLASH.discount }}%</span>
+                          <span *ngIf="CAMPAING_FLASH.type_discount === 2">-{{ CAMPAING_FLASH.discount }}USD</span>
+                          <span>Off</span>
+                        </div>
                       </a>
                     </div>
                     <div class="rbt-card-body">
@@ -302,10 +307,11 @@
               <div class="rbt-card-img">
                 <a href="course-details.html">
                   <img [src]="COURSE_TOP.image" alt="Card image" />
-                  <!-- <div class="rbt-badge-3 bg-white">
-                    <span>-50%</span>
+                  <div class="rbt-badge-3 bg-white" *ngIf="COURSE_TOP.discount_g">
+                    <span *ngIf="COURSE_TOP.discount_g.type_discount === 1">-{{ COURSE_TOP.discount_g.discount }}%</span>
+                    <span *ngIf="COURSE_TOP.discount_g.type_discount === 2">-{{ COURSE_TOP.discount_g.discount }}USD</span>
                     <span>Off</span>
-                  </div> -->
+                  </div>
                 </a>
               </div>
               <div class="rbt-card-body">
@@ -356,9 +362,9 @@
                 <div class="rbt-card-bottom">
                   <div class="rbt-price">
                     <span class="current-price"
-                      >${{ COURSE_TOP.price_usd }}</span
+                      >${{ getTotalPriceCourse(COURSE_TOP) }}</span
                     >
-                    <!-- <span class="off-price">$120</span> -->
+                    <span class="off-price" *ngIf="COURSE_TOP.discount_g">${{ COURSE_TOP.price_usd }}</span>
                   </div>
                   <a class="rbt-btn-link" href="course-details.html"
                     >Learn More<i class="feather-arrow-right"></i
@@ -1319,6 +1325,11 @@
                         <div class="rbt-card-img">
                           <a href="course-details.html">
                             <img [src]="COURSE.image" alt="Card image" />
+                            <div class="rbt-badge-3 bg-white" *ngIf="COURSE.discount_g">
+                              <span *ngIf="COURSE.discount_g.type_discount === 1">-{{ COURSE.discount_g.discount }}%</span>
+                              <span *ngIf="COURSE.discount_g.type_discount === 2">-{{ COURSE.discount_g.discount }}USD</span>
+                              <span>Off</span>
+                            </div>
                           </a>
                         </div>
                         <div class="rbt-card-body">
@@ -1350,9 +1361,9 @@
                           <div class="rbt-card-bottom">
                             <div class="rbt-price">
                               <span class="current-price"
-                                >${{ COURSE.price_usd }}</span
+                                >${{ getTotalPriceCourse(COURSE) }}</span
                               >
-                              <!-- <span class="off-price">$120</span> -->
+                              <span class="off-price" *ngIf="COURSE.discount_g">${{ COURSE.discount_g.price_usd }}USD</span>
                             </div>
                             <a class="rbt-btn-link" href="course-details.html"
                               >Learn More<i class="feather-arrow-right"></i
