--- a/src/app/modules/tienda-guest/landing-course/landing-course.component.html
+++ b/src/app/modules/tienda-guest/landing-course/landing-course.component.html
@@ -1234,8 +1234,7 @@
                           class="bi bi-star"
                           viewBox="0 0 16 16"
                         >
-      
-                    <path
+                          <path
                             d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"
                           />
                         </svg>
@@ -1944,5 +1943,235 @@
 <div class="rbt-separator-mid">
   <div class="container">
     <hr class="rbt-separator m-0" />
+  </div>
+</div>
+
+<div
+  class="rbt-related-course-area bg-color-white pt--60 rbt-section-gapBottom"
+>
+  <div class="container">
+    <div class="section-title mb--30">
+      <span class="subtitle bg-primary-opacity">More Similar Courses</span>
+      <h4 class="title">Related Courses</h4>
+    </div>
+    <div class="row g-5">
+      <!-- Start Single Card  -->
+      <div class="col-lg-4 col-md-6 col-sm-6 col-12">
+        <div class="rbt-card variation-01 rbt-hover">
+          <div class="rbt-card-img">
+            <a href="course-details.html">
+              <img
+                src="assets/images/course/course-online-03.jpg"
+                alt="Card image"
+              />
+              <div class="rbt-badge-3 bg-white">
+                <span>-10%</span>
+                <span>Off</span>
+              </div>
+            </a>
+          </div>
+          <div class="rbt-card-body">
+            <div class="rbt-card-top">
+              <div class="rbt-review">
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                <span class="rating-count"> (5 Reviews)</span>
+              </div>
+              <div class="rbt-bookmark-btn">
+                <a class="rbt-round-btn" title="Bookmark" href="#"
+                  ><i class="feather-bookmark"></i
+                ></a>
+              </div>
+            </div>
+            <h4 class="rbt-card-title">
+              <a href="course-details.html">Angular Zero to Mastery</a>
+            </h4>
+            <ul class="rbt-meta">
+              <li><i class="feather-book"></i>8 Lessons</li>
+              <li><i class="feather-users"></i>30 Students</li>
+            </ul>
+            <p class="rbt-card-text">
+              Angular Js long fact that a reader will be distracted by the
+              readable.
+            </p>
+
+            <div class="rbt-author-meta mb--20">
+              <div class="rbt-avater">
+                <a href="#">
+                  <img
+                    src="assets/images/client/avatar-03.png"
+                    alt="Sophia Jaymes"
+                  />
+                </a>
+              </div>
+              <div class="rbt-author-info">
+                By <a href="profile.html">Slaughter</a> In
+                <a href="#">Languages</a>
+              </div>
+            </div>
+            <div class="rbt-card-bottom">
+              <div class="rbt-price">
+                <span class="current-price">$80</span>
+                <span class="off-price">$100</span>
+              </div>
+              <a class="rbt-btn-link" href="course-details.html"
+                >Learn More<i class="feather-arrow-right"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End Single Card  -->
+
+      <!-- Start Single Card  -->
+      <div class="col-lg-4 col-md-6 col-sm-6 col-12">
+        <div class="rbt-card variation-01 rbt-hover">
+          <div class="rbt-card-img">
+            <a href="course-details.html">
+              <img
+                src="assets/images/course/course-online-04.jpg"
+                alt="Card image"
+              />
+              <div class="rbt-badge-3 bg-white">
+                <span>-40%</span>
+                <span>Off</span>
+              </div>
+            </a>
+          </div>
+          <div class="rbt-card-body">
+            <div class="rbt-card-top">
+              <div class="rbt-review">
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                <span class="rating-count"> (15 Reviews)</span>
+              </div>
+              <div class="rbt-bookmark-btn">
+                <a class="rbt-round-btn" title="Bookmark" href="#"
+                  ><i class="feather-bookmark"></i
+                ></a>
+              </div>
+            </div>
+
+            <h4 class="rbt-card-title">
+              <a href="course-details.html">Web Front To Back</a>
+            </h4>
+            <ul class="rbt-meta">
+              <li><i class="feather-book"></i>20 Lessons</li>
+              <li><i class="feather-users"></i>40 Students</li>
+            </ul>
+            <p class="rbt-card-text">
+              Web Js long fact that a reader will be distracted by the readable.
+            </p>
+            <div class="rbt-author-meta mb--20">
+              <div class="rbt-avater">
+                <a href="#">
+                  <img
+                    src="assets/images/client/avater-01.png"
+                    alt="Sophia Jaymes"
+                  />
+                </a>
+              </div>
+              <div class="rbt-author-info">
+                By <a href="profile.html">Patrick</a> In
+                <a href="#">Languages</a>
+              </div>
+            </div>
+
+            <div class="rbt-card-bottom">
+              <div class="rbt-price">
+                <span class="current-price">$60</span>
+                <span class="off-price">$120</span>
+              </div>
+              <a class="rbt-btn-link" href="course-details.html"
+                >Learn More<i class="feather-arrow-right"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End Single Card  -->
+
+      <!-- Start Single Card  -->
+      <div class="col-lg-4 col-md-6 col-sm-6 col-12">
+        <div class="rbt-card variation-01 rbt-hover">
+          <div class="rbt-card-img">
+            <a href="course-details.html">
+              <img
+                src="assets/images/course/course-online-05.jpg"
+                alt="Card image"
+              />
+              <div class="rbt-badge-3 bg-white">
+                <span>-20%</span>
+                <span>Off</span>
+              </div>
+            </a>
+          </div>
+          <div class="rbt-card-body">
+            <div class="rbt-card-top">
+              <div class="rbt-review">
+                <div class="rating">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                <span class="rating-count"> (15 Reviews)</span>
+              </div>
+              <div class="rbt-bookmark-btn">
+                <a class="rbt-round-btn" title="Bookmark" href="#"
+                  ><i class="feather-bookmark"></i
+                ></a>
+              </div>
+            </div>
+            <h4 class="rbt-card-title">
+              <a href="course-details.html">SQL Beginner Advanced</a>
+            </h4>
+            <ul class="rbt-meta">
+              <li><i class="feather-book"></i>12 Lessons</li>
+              <li><i class="feather-users"></i>50 Students</li>
+            </ul>
+            <p class="rbt-card-text">
+              It is a long established fact that a reader will be distracted by
+              the readable.
+            </p>
+            <div class="rbt-author-meta mb--20">
+              <div class="rbt-avater">
+                <a href="#">
+                  <img
+                    src="assets/images/client/avatar-02.png"
+                    alt="Sophia Jaymes"
+                  />
+                </a>
+              </div>
+              <div class="rbt-author-info">
+                By <a href="profile.html">Angela</a> In
+                <a href="#">Development</a>
+              </div>
+            </div>
+            <div class="rbt-card-bottom">
+              <div class="rbt-price">
+                <span class="current-price">$60</span>
+                <span class="off-price">$120</span>
+              </div>
+              <a class="rbt-btn-link left-icon" href="course-details.html"
+                ><i class="feather-shopping-cart"></i> Add To Cart</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End Single Card  -->
+    </div>
   </div>
 </div>
