[Feat] Agregar la visualización del video trailer en el detallado de un curso

--- a/src/app/modules/tienda-guest/landing-course/landing-course.component.html
+++ b/src/app/modules/tienda-guest/landing-course/landing-course.component.html
@@ -1206,7 +1206,7 @@
             <!-- Start Viedo Wrapper  -->
             <a
               class="video-popup-with-text video-popup-wrapper text-center popup-video sidebar-video-hidden mb--15"
-              href="https://www.youtube.com/watch?v=nA1Aqp0sPQo"
+              [href]="course.vimeo_id"
             >
               <div class="video-content">
                 <img
