[Feat] Agregar el numero de clases al detallado de las tarjetas

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -82,7 +82,7 @@
                       </div>
                       <div class="rbt-card-body">
                         <ul class="rbt-meta">
-                          <li><i class="feather-book"></i>12 Lessons</li>
+                          <li><i class="feather-book"></i>{{ COURSE_B.n_clases }} Lessons</li>
                           <li><i class="feather-users"></i>50 Students</li>
                         </ul>
                         <h4 class="rbt-card-title">
@@ -293,7 +293,7 @@
                         >
                       </h4>
                       <ul class="rbt-meta">
-                        <li><i class="feather-book"></i>20 Lessons</li>
+                        <li><i class="feather-book"></i>{{ COURSE_F.n_clases }} Lessons</li>
                         <li><i class="feather-users"></i>40 Students</li>
                       </ul>
 
@@ -391,7 +391,7 @@
                   }}</a>
                 </h4>
                 <ul class="rbt-meta">
-                  <li><i class="feather-book"></i>20 Lessons</li>
+                  <li><i class="feather-book"></i>{{ COURSE_TOP.n_clases }} Lessons</li>
                   <li><i class="feather-users"></i>40 Students</li>
                 </ul>
                 <p class="rbt-card-text">
@@ -1429,7 +1429,7 @@
                             >
                           </h4>
                           <ul class="rbt-meta">
-                            <li><i class="feather-book"></i>20 Lessons</li>
+                            <li><i class="feather-book"></i>{{ COURSE.n_clases }} Lessons</li>
                             <li><i class="feather-users"></i>40 Students</li>
                           </ul>
 
