--- a/src/app/modules/tienda-guest/landing-course/landing-course.component.html
+++ b/src/app/modules/tienda-guest/landing-course/landing-course.component.html
@@ -1099,7 +1099,7 @@
                       <a onclick="return false;">{{ course.title }}</a>
                     </h4>
                     <ul class="rbt-meta">
-                      <li><i class="feather-book"></i>8 Lessons</li>
+                      <li><i class="feather-book"></i>{{ course.n_clases }} Lessons</li>
                       <li><i class="feather-users"></i>30 Students</li>
                     </ul>
                     <p class="rbt-card-text">
@@ -1364,7 +1364,7 @@
                 <a onclick="return false;">{{ course.title }}</a>
               </h4>
               <ul class="rbt-meta">
-                <li><i class="feather-book"></i>8 Lessons</li>
+                <li><i class="feather-book"></i>{{ course.n_clases }} Lessons</li>
                 <li><i class="feather-users"></i>30 Students</li>
               </ul>
               <p class="rbt-card-text">
