--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1575,7 +1575,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="index.html">
+                      <a href="#" onclick="return false;" (click)="logout()">
                         <i class="feather-log-out"></i>
                         <span>Logout</span>
                       </a>
