[Feat] Agregar la cantidad de items agregados al carrito de compras

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1385,7 +1385,7 @@
             <li class="access-icon rbt-mini-cart">
               <a class="rbt-cart-sidenav-activation rbt-round-btn" href="#">
                 <i class="feather-shopping-cart"></i>
-                <span class="rbt-cart-count">4</span>
+                <span class="rbt-cart-count">{{ carts.length }}</span>
               </a>
             </li>
 
