--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -82,7 +82,10 @@
                       </div>
                       <div class="rbt-card-body">
                         <ul class="rbt-meta">
-                          <li><i class="feather-book"></i>{{ COURSE_B.n_clases }} Lessons</li>
+                          <li>
+                            <i class="feather-book"></i
+                            >{{ COURSE_B.n_clases }} Lessons
+                          </li>
                           <li><i class="feather-users"></i>50 Students</li>
                         </ul>
                         <h4 class="rbt-card-title">
@@ -293,7 +296,10 @@
                         >
                       </h4>
                       <ul class="rbt-meta">
-                        <li><i class="feather-book"></i>{{ COURSE_F.n_clases }} Lessons</li>
+                        <li>
+                          <i class="feather-book"></i
+                          >{{ COURSE_F.n_clases }} Lessons
+                        </li>
                         <li><i class="feather-users"></i>40 Students</li>
                       </ul>
 
@@ -391,7 +397,10 @@
                   }}</a>
                 </h4>
                 <ul class="rbt-meta">
-                  <li><i class="feather-book"></i>{{ COURSE_TOP.n_clases }} Lessons</li>
+                  <li>
+                    <i class="feather-book"></i
+                    >{{ COURSE_TOP.n_clases }} Lessons
+                  </li>
                   <li><i class="feather-users"></i>40 Students</li>
                 </ul>
                 <p class="rbt-card-text">
@@ -423,14 +432,17 @@
                     >
                   </div>
                   <a
-                    class="rbt-btn-link"
-                    [routerLink]="['store/landig-course/', COURSE_TOP.slug]"
-                    >Learn More<i class="feather-arrow-right"></i
-                  ></a>
+                    class="rbt-btn-link left-icon"
+                    onclick="return false;"
+                    (click)="addCart(COURSE_TOP)"
+                    href="#"
+                    ><i class="feather-shopping-cart"> Add To Cart</i></a
+                  >
                 </div>
               </div>
-            </div></div
-        ></ng-container>
+            </div>
+          </div></ng-container
+        >
         <!-- End Single Course  -->
       </div>
       <!-- End Card Area -->
@@ -1429,7 +1441,10 @@
                             >
                           </h4>
                           <ul class="rbt-meta">
-                            <li><i class="feather-book"></i>{{ COURSE.n_clases }} Lessons</li>
+                            <li>
+                              <i class="feather-book"></i
+                              >{{ COURSE.n_clases }} Lessons
+                            </li>
                             <li><i class="feather-users"></i>40 Students</li>
                           </ul>
 
