[Style] Modificar representación del precio de los cursos del carrito de compras

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2961,7 +2961,7 @@
 
               <span class="quantity"
                 >{{ cart.course.categorie.title + " "
-                }}<span class="price">${{ cart.course.price_usd }}</span></span
+                }}<span class="price">${{ cart.total }}</span></span
               >
             </div>
             <div class="close-btn">
