[Refactor] Agregar la campaña de descuento a los cursos registrados en el carrito de compras

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -138,7 +138,7 @@
                           <a
                             class="rbt-btn-link left-icon"
                             onclick="return false;"
-                            (click)="addCart(COURSE_B)"
+                            (click)="addCart(COURSE_B, CAMPAING_BANNER)"
                             href="#"
                             ><i class="feather-shopping-cart">
                               Add To Cart</i
@@ -332,7 +332,7 @@
                         <a
                           class="rbt-btn-link left-icon"
                           onclick="return false;"
-                          (click)="addCart(COURSE_F)"
+                          (click)="addCart(COURSE_F, CAMPAING_FLASH)"
                           href="#"
                           ><i class="feather-shopping-cart"> Add To Cart</i></a
                         >
