[Refactor] Eliminar redireccionamiento del icono del carrito de compras

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1383,7 +1383,7 @@
             </li>
 
             <li class="access-icon rbt-mini-cart">
-              <a class="rbt-cart-sidenav-activation rbt-round-btn" href="#">
+              <a class="rbt-cart-sidenav-activation rbt-round-btn" href="#" onclick="return false;">
                 <i class="feather-shopping-cart"></i>
                 <span class="rbt-cart-count">{{ carts.length }}</span>
               </a>
