--- a/src/app/modules/tienda-guest/landing-course/landing-course.component.html
+++ b/src/app/modules/tienda-guest/landing-course/landing-course.component.html
@@ -1061,7 +1061,7 @@
               >
                 <div class="rbt-card variation-01 rbt-hover">
                   <div class="rbt-card-img">
-                    <a href="course-details.html">
+                    <a href="#" onclick="return false;">
                       <img [src]="course.image" alt="image" />
                       <div
                         class="rbt-badge-3 bg-white"
@@ -1096,7 +1096,7 @@
                       </div>
                     </div>
                     <h4 class="rbt-card-title">
-                      <a onclick="return false;">{{ course.title }}</a>
+                      <a href="#" onclick="return false;">{{ course.title }}</a>
                     </h4>
                     <ul class="rbt-meta">
                       <li><i class="feather-book"></i>{{ course.n_clases }} Lessons</li>
@@ -1188,6 +1188,8 @@
 
               <div class="add-to-card-button mt--15">
                 <a
+                  onclick="return false;"
+                  (click)="addCart()"
                   class="rbt-btn btn-gradient icon-hover w-100 d-block text-center"
                   href="#"
                 >
