[Refactor] Agregar funcion para eliminar un curso del carrito de compras

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2965,7 +2965,7 @@
               >
             </div>
             <div class="close-btn">
-              <button class="rbt-round-btn"><i class="feather-x"></i></button>
+              <button class="rbt-round-btn" (click)="removeItem(cart.course)"><i class="feather-x"></i></button>
             </div>
           </li>
         </ng-container>
